# face-detection

./: pyproject.toml  utils.py
detection/: core.py
detection/sfd/: bbox.py  detect.py
face_detection/: api.py
face_detection/detection/sfd/: net_s3fd.py  sfd_detector.py
