[tool.poetry]
name = "face-detection"
version = "1.0.1"
description = "Face detection used by Apollo"
authors = ["Adrian Bulat <adrian.bulat@nottingham.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [
    { include = "face_detection" },
]
